removed error prone causing illegal reflective access warning, fixed lint issues